HS SQL-Con Mapper 完善&HomeworkService定义